src/main/java/com/example/githubrepos/api/error/exception/BadContentTypeException.java
package com.example.githubrepos.api.error.exception;

public class BadContentTypeException extends RuntimeException {
    public BadContentTypeException(String message) {
        super(message);
    }
}
